--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "description": "PHP Schema",
   "type": "library",
   "require": {
-    "php": ">=5.3"
+    "php": ">=5.3",
+    "phplang/scope-exit": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.23",
