--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /stubs export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.gitmodules export-ignore
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
 /phpunit.xml export-ignore
