--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: php
 php:
   - nightly
   - hhvm
+  - 7.1
   - 7.0
   - 5.6
   - 5.5
@@ -29,6 +30,7 @@ script:
   - ./vendor/bin/phpunit -v --configuration phpunit.xml --coverage-clover build/logs/clover.xml
 
 after_script:
- - php vendor/bin/coveralls -v
  - wget https://scrutinizer-ci.com/ocular.phar
  - php ocular.phar code-coverage:upload --format=php-clover build/logs/coverage.clover
+ - if [[ $(phpenv version-name) =~ 7.0 ]] ; then php vendor/bin/coveralls -v; fi
+ - if [[ $(phpenv version-name) =~ 7.0 ]] ; then ./vendor/bin/test-reporter; fi
