--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 *.dat           -text
 /tests export-ignore
 /stubs export-ignore
+/tools export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.gitmodules export-ignore
