--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.23",
+    "swaggest/code-builder": "dev-master#e0c5c0612fd241d2d120e5ddef91cda9edc208ee",
+    "swaggest/php-code-builder": "dev-master#3e643924445eb0f8d13dd011a57a42ce75629892",
     "phpunit/php-code-coverage": "2.2.4",
-    "codeclimate/php-test-reporter": "0.1.2"
+    "codeclimate/php-test-reporter": "^0.4.0"
   },
   "license": "MIT",
   "authors": [
@@ -31,5 +33,9 @@
     "psr-4": {
       "Swaggest\\JsonSchema\\Tests\\": "tests/src/"
     }
+  },
+  "scripts": {
+    "gen-swg-struct": "php ./tools/generate_swagger_structures.php",
+    "gen-json-struct": "php ./tools/generate_json_structures.php"
   }
 }
