--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "swaggest/code-builder": "dev-master#e0c5c0612fd241d2d120e5ddef91cda9edc208ee",
     "swaggest/php-code-builder": "dev-master#3e643924445eb0f8d13dd011a57a42ce75629892",
     "phpunit/php-code-coverage": "2.2.4",
-    "codeclimate/php-test-reporter": "^0.4.0",
-    "phpstan/phpstan": "^0.9.1"
+    "codeclimate/php-test-reporter": "^0.4.0"
   },
   "license": "MIT",
   "authors": [
