--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "library",
   "require": {
     "php": ">=5.4",
-    "phplang/scope-exit": "^1.0"
+    "phplang/scope-exit": "^1.0",
+    "swaggest/json-diff": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.23",
