--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": ">=5.4",
     "phplang/scope-exit": "^1.0",
-    "swaggest/json-diff": "^2.0"
+    "swaggest/json-diff": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.35",
@@ -37,5 +37,10 @@
   },
   "scripts": {
     "gen-json-struct": "php ./tools/generate_json_structures.php"
+  },
+  "config": {
+    "platform": {
+      "php": "5.4.45"
+    }
   }
 }
