--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require-dev": {
     "phpunit/phpunit": "4.8.35",
     "phpunit/php-code-coverage": "2.2.4",
-    "codeclimate/php-test-reporter": "^0.4.0"
+    "codeclimate/php-test-reporter": "0.4.0"
   },
   "license": "MIT",
   "authors": [
