--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-# execute any number of scripts before the test run, custom env's are available as variables
 before_script:
   - composer install --dev --no-interaction --prefer-dist
-  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then test -f $HOME/.composer/cache/phpstan.phar || wget https://github.com/phpstan/phpstan/releases/download/0.9.2/phpstan.phar -O $HOME/.composer/cache/phpstan.phar; fi
+  - if ! [[ $(phpenv version-name) =~ 7.2 ]] ; then phpenv config-rm xdebug.ini ; fi
+  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then test -f $HOME/.composer/cache/phpstan-0.11.8.phar || wget https://github.com/phpstan/phpstan/releases/download/0.11.8/phpstan.phar -O $HOME/.composer/cache/phpstan-0.11.8.phar; fi
 
 matrix:
   allow_failures:
@@ -31,7 +31,7 @@ matrix:
 
 script:
   - ./vendor/bin/phpunit -v --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml
-  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then php $HOME/.composer/cache/phpstan.phar analyze -l 7 -c phpstan.neon ./src; fi
+  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then php $HOME/.composer/cache/phpstan-0.11.8.phar analyze -l 7 -c phpstan.neon ./src; fi
 
 after_script:
   - if [[ $(phpenv version-name) =~ 7.2 ]] ; then bash <(curl -s https://codecov.io/bash); fi
