--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ sudo: false
 ## Cache composer bits
 cache:
   directories:
-    - $HOME/.composer/cache
+    - $HOME/.cache/composer
 
 before_script:
   - composer install --dev --no-interaction --prefer-dist
   - if ! [[ $(phpenv version-name) =~ 7.2 ]] ; then phpenv config-rm xdebug.ini ; fi
-  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then test -f $HOME/.composer/cache/phpstan-0.11.8.phar || wget https://github.com/phpstan/phpstan/releases/download/0.11.8/phpstan.phar -O $HOME/.composer/cache/phpstan-0.11.8.phar; fi
+  - if [[ $(phpenv version-name) =~ 7.3 ]] ; then test -f $HOME/.cache/composer/phpstan-0.11.8.phar || wget https://github.com/phpstan/phpstan/releases/download/0.11.8/phpstan.phar -O $HOME/.cache/composer/phpstan-0.11.8.phar; fi
 
 matrix:
   allow_failures:
@@ -29,8 +29,8 @@ matrix:
   fast_finish: true
 
 script:
-  - ./vendor/bin/phpunit -v --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml
-  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then php $HOME/.composer/cache/phpstan-0.11.8.phar analyze -l 7 -c phpstan.neon ./src; fi
+  - php -derror_reporting="E_ALL & ~E_DEPRECATED" ./vendor/bin/phpunit -v --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml
+  - if [[ $(phpenv version-name) =~ 7.3 ]] ; then php $HOME/.cache/composer/phpstan-0.11.8.phar analyze -l 7 -c phpstan.neon ./src; fi
 
 after_script:
   - if [[ $(phpenv version-name) =~ 7.2 ]] ; then bash <(curl -s https://codecov.io/bash); fi
