--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,5 @@
 parameters:
+	inferPrivatePropertyTypeFromConstructor: true
 	ignoreErrors:
 		- '#Access to an undefined property static\(Swaggest\\JsonSchema\\JsonSchema\)\|Swaggest\\JsonSchema\\Constraint\\Properties::#'
 		- '#Access to an undefined property .+Swaggest\\JsonSchema\\NameMirror::.+#'
