--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
 
 script:
   - if [[ $(phpenv version-name) =~ 7.3 ]] ; then make test-coverage; else make test; fi
-  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then make lint bench bench-master bench-compare; fi
+  - if [[ $(phpenv version-name) =~ 7.2 ]] ; then make lint; fi
 
 after_script:
   - if [[ $(phpenv version-name) =~ 7.3 ]] ; then bash <(curl -s https://codecov.io/bash); fi
