--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "swaggest/json-diff": "^3.5.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.35",
-    "phpunit/php-code-coverage": "2.2.4"
+    "phpunit/phpunit": "^5",
+    "phpunit/php-code-coverage": "^4"
   },
   "license": "MIT",
   "authors": [
@@ -36,7 +36,7 @@
   },
   "config": {
     "platform": {
-      "php": "5.4.45"
+      "php": "5.6.0"
     }
   }
 }
