--- a/.github/workflows/test-unit-cov.yml
+++ b/.github/workflows/test-unit-cov.yml
@@ -1,5 +1,4 @@
-# This script is provided by github.com/bool64/dev.
-name: test-unit
+name: test-unit-cov
 on:
   push:
     branches:
@@ -11,8 +10,8 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: ['ubuntu-latest']
-        php-versions: ['8.0']
+        operating-system: [ 'ubuntu-latest' ]
+        php-versions: [ '7.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
