--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,21 +7,16 @@ on:
   pull_request:
 jobs:
   run:
+    name: lint (${{ matrix.operating-system }}, ${{ matrix.php-versions }})
     runs-on: ${{ matrix.operating-system }}
     strategy:
+      fail-fast: false
       matrix:
         operating-system: [ 'ubuntu-latest' ]
         php-versions: [ '7.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Cache vendor
-        uses: actions/cache@v2
-        with:
-          path: |
-            vendor
-          key: vendor-${{ hashFiles('composer.lock') }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -30,8 +25,21 @@ jobs:
           ini-values: post_max_size=256M, max_execution_time=180
           tools: composer
 
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Cache dependencies
+        # see https://github.com/actions/cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: composer-${{ runner.os }}-${{ matrix.php-version }}-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            composer-${{ runner.os }}-${{ matrix.php-version }}-
+            composer-${{ runner.os }}-
+
       - name: Populate vendor
-        run: '[ -e vendor ] || composer install'
+        run: composer install
 
       - name: Lint
         run: make lint
