--- a/.github/workflows/test-unit-cov.yml
+++ b/.github/workflows/test-unit-cov.yml
@@ -32,7 +32,7 @@ jobs:
           tools: composer
 
       - name: Populate vendor
-        run: '[ -e vendor ] || composer install'
+        run: '[ -e vendor ] || (composer install && patch -s -p0 < ./tools/phpunit.patc)'
 
       - name: Run Tests With Coverage
         run: make deps test-coverage && bash <(curl -s https://codecov.io/bash)
