--- a/.github/workflows/test-unit-cov.yml
+++ b/.github/workflows/test-unit-cov.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           path: |
             vendor
-          key: vendor-${{ hashFiles('composer.lock') }}
+          key: deps-${{ hashFiles('composer.lock') }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
