--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,10 @@
     "ext-json": "*",
     "ext-mbstring": "*",
     "phplang/scope-exit": "^1.0",
-    "swaggest/json-diff": "^3.5.1"
+    "swaggest/json-diff": "^3.8.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5",
-    "phpunit/php-code-coverage": "^4"
+    "phpunit/phpunit": "^4.8.23"
   },
   "license": "MIT",
   "authors": [
@@ -36,7 +35,7 @@
   },
   "config": {
     "platform": {
-      "php": "5.6.0"
+      "php": "5.4.45"
     }
   }
 }
