--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
   "require": {
     "php": ">=5.4",
     "ext-json": "*",
-    "ext-mbstring": "*",
     "phplang/scope-exit": "^1.0",
-    "swaggest/json-diff": "^3.8.2"
+    "swaggest/json-diff": "^3.8.2",
+    "symfony/polyfill-mbstring": "^1.19"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8.23"
@@ -37,5 +37,8 @@
     "platform": {
       "php": "5.4.45"
     }
+  },
+  "suggest": {
+    "ext-mbstring": "For better performance"
   }
 }
