--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -31,7 +31,7 @@ jobs:
           tools: composer
 
       - name: Populate vendor
-        run: '[ -e vendor ] || (composer install && patch -s -p0 < ./tests/phpunit.patch)'
+        run: '[ -e vendor ] || composer install'
 
       - name: Run Tests
         run: make deps test
