--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "symfony/polyfill-mbstring": "^1.19"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8.23"
+    "phperf/phpunit": "4.8.37"
   },
   "license": "MIT",
   "authors": [
@@ -40,10 +40,5 @@
   },
   "suggest": {
     "ext-mbstring": "For better performance"
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "patch -N -s -p0 < ./tests/phpunit.patch"
-    ]
   }
 }
