--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text          eol=lf
 *.serialized    -text
 *.dat           -text
+/.github/ export-ignore
 /tests export-ignore
 /stubs export-ignore
 /tools export-ignore
@@ -9,5 +10,6 @@
 /.gitmodules export-ignore
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
+/Makefile export-ignore
 /phpunit.xml export-ignore
 /phpstan.neon export-ignore
